--- a/Cwoczenia-do-wyboru---Zaliczenie/pom.xml
+++ b/Cwoczenia-do-wyboru---Zaliczenie/pom.xml
@@ -9,13 +9,26 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!-- Add JUnit dependency here -->
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.scalatestplus</groupId>
+            <artifactId>junit-4-13_0.26</artifactId>
+            <version>3.1.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
